--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="reciprs/Lasagna.html">Lasagna recipe</a>
+    <h1>Lasagna</h1>
 </body>
 </html>
