editing index.html

--- a/index.html
+++ b/index.html
@@ -75,13 +75,21 @@
       How to Layer Lasagna The detailed layering instructions can be found in
       the recipe below, but this is the order you'll follow:
     </p>
-    Meat sauce Noodles Ricotta mixture Mozzarella slices Meat sauce Parmesan
-    cheese Repeat the layers, then top with the remaining Parmesan. How Long to
-    Cook Lasagna The assembled lasagna should take about 50 minutes to cook in
-    an oven preheated to 375 degrees F. Cover it with foil for the first 25
-    minutes, then let it cook uncovered for the final 25 minutes. Also, it's
-    important to let the lasagna rest at room temperature for about 15 minutes
-    before you cut into it.
+    <ol>
+      <li>Meat</li>
+      <li>sauce</li>
+      <li>Noodles</li>
+      <li>Ricotta mixture</li>
+      <li>Mozzarella slices</li>
+      <li>Meat sauce</li>
+      <li>Parmesan cheese</li>
+      <li>Repeat the layers, then top with the remaining Parmesan.</li>
+    </ol>
+    How Long to Cook Lasagna The assembled lasagna should take about 50 minutes
+    to cook in an oven preheated to 375 degrees F. Cover it with foil for the
+    first 25 minutes, then let it cook uncovered for the final 25 minutes. Also,
+    it's important to let the lasagna rest at room temperature for about 15
+    minutes before you cut into it.
 
     <h2>What to Serve With Lasagna</h2>
     <p>
