--- a/index.html
+++ b/index.html
@@ -85,12 +85,14 @@
       <li>Parmesan cheese</li>
       <li>Repeat the layers, then top with the remaining Parmesan.</li>
     </ol>
-    How Long to Cook Lasagna The assembled lasagna should take about 50 minutes
-    to cook in an oven preheated to 375 degrees F. Cover it with foil for the
-    first 25 minutes, then let it cook uncovered for the final 25 minutes. Also,
-    it's important to let the lasagna rest at room temperature for about 15
-    minutes before you cut into it.
-
+    <h2>How Long to Cook Lasagna</h2>
+    <p>
+      The assembled lasagna should take about 50 minutes to cook in an oven
+      preheated to 375 degrees F. Cover it with foil for the first 25 minutes,
+      then let it cook uncovered for the final 25 minutes. Also, it's important
+      to let the lasagna rest at room temperature for about 15 minutes before
+      you cut into it.
+    </p>
     <h2>What to Serve With Lasagna</h2>
     <p>
       Wondering what goes with lasagna? We've got you covered. Check out our
@@ -98,7 +100,9 @@
       inspiration. These are a few of the recipes you'll find:
     </p>
     <ul>
-      Two-Ingredient Garlic Knots Arugula-Fennel Salad Balsamic Grilled Zucchini
+      <li>Two-Ingredient Garlic Knots</li>
+      <li>Arugula-Fennel Salad</li>
+      <li>Balsamic Grilled Zucchini</li>
     </ul>
   </body>
 </html>
