--- a/recipes/Breakfast_Nachos.html
+++ b/recipes/Breakfast_Nachos.html
@@ -13,5 +13,110 @@
       steak, eggs, beans, and cheese, broiled, dressed with everything else
       nacho, then finished with a zingy chimichurri sauce.
     </p>
+    <img
+      src="https://www.allrecipes.com/thmb/mmz28cFuMfs7r3tc8sPItj4xzuc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8679259-breakfast-nachos-ddmfs-2269-beauty-4x3-414d2dc9d1364107a473c91ac9f3398d.jpg"
+      alt="" />
+    <h2>Ingredients</h2>
+    <h3>chimichurri</h3>
+    <ul>
+      <li>3/4 cup packed fresh cilantro leaves and tender stems</li>
+      <li>
+        1/2 cup loosely packed fresh flat-leaf parsley leaves and tender stems
+      </li>
+      <li>1 clove garlic, coarsely chopped</li>
+      <li>1 1/2 tablespoons red wine vinegar</li>
+      <li>1/4 teaspoon crushed red pepper</li>
+      <li>1/4 teaspoon kosher salt</li>
+      <li>1/4 cup extra-virgin olive oil</li>
+    </ul>
+    <h3>Nachos</h3>
+    <ul>
+      <li>1 (8 ounce) flat iron steak, patted dry</li>
+      <li>3/4 teaspoon kosher salt, divided</li>
+      <li>1/2 teaspoon ground black pepper, divided</li>
+      <li>1/2 teaspoon ground cumin (optional)</li>
+      <li>2 tablespoons olive oil</li>
+      <li>8 large eggs</li>
+      <li>1 (11 ounce) package tortilla chips (such as Tostitos®)</li>
+      <li>
+        2 (8 ounce) packages shredded Mexican cheese blend (such as Tilamook®)
+      </li>
+      <li>1 (15 ounce) can black beans, drained and rinsed</li>
+      <li>1 cup chopped plum tomatoes</li>
+      <li>1 avocado, chopped</li>
+      <li>1/2 cup drained pickled jalapeno slices</li>
+      <li>1/2 cup sour cream, or as needed</li>
+    </ul>
+    <h2>Directions</h2>
+    <h3>Step 1</h3>
+    <p>Gather all ingredients.</p>
+    <img
+      src="https://www.allrecipes.com/thmb/ievdZd-B2Nso4V5BqQOR3wd0HU4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8679259-breakfast-nachos-ddmfs-2227-step-01-4x3-80718c4f9fe2494caddd4cd46eff7118.jpg"
+      alt="" />
+
+    <h3>Step 2</h3>
+    <p>
+      For chimichurri: Place cilantro, parsley, garlic, vinegar, crushed red
+      pepper, and salt in a small food processor; pulse until finely chopped,
+      about 10 pulses. With processor running, pour oil through food chute, and
+      process until fully incorporated, about 20 seconds; set aside.
+    </p>
+    <img
+      src="https://www.allrecipes.com/thmb/Z00BQoGYAPWSnwINAdMPBCF7xUQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8679259-breakfast-nachos-ddmfs-2234-step-04-4x3-ded010de385c4885a6898bf0b59b8ce2.jpg"
+      alt="" />
+
+    <h3>Step 3</h3>
+    <p>
+      For steak: Sprinkle steak evenly with 1/2 teaspoon of the salt, 1/4
+      teaspoon of the black pepper, and cumin, as desired. Heat a medium
+      cast-iron skillet over medium-high for 5 minutes. Add steak and 1
+      tablespoon of the oil, swirling to distribute oil evenly. Cook,
+      undisturbed, until nicely browned and a thermometer inserted into thickest
+      portion of steak registers 120 degreed F (49 degrees ) for rare, about 3
+      minutes per side. Transfer to a cutting board, and let rest 10 minutes. Do
+      not wipe skillet clean.
+    </p>
+    <img
+      src="https://www.allrecipes.com/thmb/8z-Pk5MbBOaDDd3Cxitq9-aP4rM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8679259-breakfast-nachos-ddmfs-2231-step-02-4x3-9477c474e14f4402bd69656d0c8f2eb5.jpg"
+      alt="" />
+
+    <h3>Step 4</h3>
+    <p>
+      Meanwhile, whisk together eggs and remaining 1/4 teaspoon each salt and
+      black pepper in a medium bowl until thoroughly blended. Heat cast-iron
+      skillet over medium. Add remaining 1 tablespoon oil and eggs; cook,
+      stirring occasionally, until just set, about 2 minutes. Transfer to a
+      bowl; cover, and set aside.
+    </p>
+    <img
+      src="https://www.allrecipes.com/thmb/KdOx8mQig3xJd-6WvoWUS_99iGo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8679259-breakfast-nachos-ddmfs-2232-step-03-4x3-0dc08225136b4d1098063774d90f5f0a.jpg"
+      alt="" />
+
+    <h3>Step 5</h3>
+    <p>
+      Preheat the oven’s broiler and place a rack about 12 inches from the heat
+      source. Line a large rimmed baking sheet with aluminum foil.
+    </p>
+    <h3>Step 6</h3>
+    <p>
+      To assemble nachos, arrange half of tortilla chips in an even layer on
+      prepared baking sheet. Thinly slice steak across the grain, and cut into
+      3/4-inch pieces. Sprinkle tortilla chips evenly with half of steak, half
+      of beans, half of eggs, and half of Mexican blend cheese. Repeat with
+      remaining chips, steak, beans, eggs, and cheese.
+    </p>
+    <img
+      src="https://www.allrecipes.com/thmb/UpOAIo6iNoyzRlUBJ0X-yp9MN8U=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8679259-breakfast-nachos-ddmfs-2235-step-05-4x3-a19b651cdbe9418a8c3a8486e004162e.jpg"
+      alt="" />
+    <h3>Step 7</h3>
+    <p>
+      Broil until cheese is melted and bubbly, about 2 minutes. Top with
+      tomatoes, avocado, and pickled jalapeños. Drizzle evenly with chimichurri,
+      and serve with sour cream.
+    </p>
+    <img
+      src="https://www.allrecipes.com/thmb/2oujq2rxWfYli5ZFdu1BBQRRUbg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8679259-breakfast-nachos-ddmfs-2238-step-06-4x3-b8f5afb378d74ad6ad66564b7695d83f.jpg"
+      alt="" />
+    <p>Bonne Apite</p>
   </body>
 </html>
