adding  Watermelon Salad.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <a href="http://127.0.0.1:3000/recipes/lasagna.html">Lasagna recipe</a>
 
     <a href="http://127.0.0.1:3000/recipes/Breakfast_Nachos.html"
-      >Breakfast_Nachos</a
+      >Breakfast Nachos</a
+    >
+    <a href="http://127.0.0.1:3000/recipes/Watermelon_Salad.html"
+      >Watermelonl Salad</a
     >
   </body>
 </html>
