Editing Watermelon Salad Recipe

--- a/recipes/Watermelon_Salad.html
+++ b/recipes/Watermelon_Salad.html
@@ -13,5 +13,89 @@
       light meal on a hot summer day. <br />
       This watermelon salad is fun to make, refreshing, and fruity.
     </p>
+    <h2>Watermelon Salad Ingredients</h2>
+    <p>Here’s what you’ll need to make this watermelon salad recipe:</p>
+    <ul>
+      <li>Onion: Red onion adds bright color and bold flavor.</li>
+      <li>Lime juice: Lime juice brightens up the flavor.</li>
+      <li>Watermelon: Of course,you’ll need watermelon!</li>
+      <li>Cucumber: English cucumbers lend refreshing flavor.</li>
+
+      <li>
+        Feta: Crumbled feta cheese gives the watermelon salad a creamy flavor.
+      </li>
+      <li>
+        Herbs and seasonings: Finish the salad with fresh cilantro, sea salt,
+        and cracked black pepper.
+      </li>
+    </ul>
+    <h2>How to Make Watermelon Salad</h2>
+    <p>
+      You’ll find the full, step-by-step recipe below – but here’s a brief
+      overview of what you can expect when you make watermelon salad: <br />
+      Marinate the onions in lime juice, then combine all the ingredients and
+      toss to combine.
+    </p>
+    <h2>Can You Make Watermelon Salad Ahead of Time?</h2>
+    <p>
+      You can make this fresh watermelon salad up to a day in advance. However,
+      it’s best to add the feta just before serving so it doesn’t become soggy.
+    </p>
+    <h2>How to Store Watermelon Salad</h2>
+    <p>
+      This summery watermelon salad will pair perfectly with your favorite
+      grilled protein. Here are a few delicious serving ideas:
+    </p>
+    <ul>
+      <li>Grilled Rosemary Chicken Breasts</li>
+      <li>Grilled Sea Bass</li>
+      <li>Sirloin Steak with Garlic Butter</li>
+    </ul>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 cup sliced red onion, cut lengthwise</li>
+      <li>3 tablespoons lime juice</li>
+      <li>15 cups cubed watermelon</li>
+      <li>3 cups cubed English cucumber</li>
+      <li>1 (8 ounce) package feta cheese, crumbled</li>
+      <li>½ cup chopped fresh cilantro</li>
+      <li>cracked black pepper, to taste</li>
+      <li>sea salt, to taste</li>
+    </ul>
+    <h2>Directions</h2>
+    <h3>Step 1</h3>
+    <p>Gather the ingredients.</p>
+    <img
+      src="https://www.allrecipes.com/thmb/O6967NY7qPyFZB_IhQibgy-VIKw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-111853-refreshing-watermelon-salad-VAT-step-01-5c9aef847fa941689fa58482443c8afb.jpg"
+      alt="" />
+    <h3>Step 2</h3>
+    <p>
+      Place red onion slices in a small bowl; pour over lime juice. Allow onions
+      to marinate while assembling the salad.
+    </p>
+    <img
+      src="https://www.allrecipes.com/thmb/PTOA_gAOi-hsAgwu8jmPjCwkwBg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-111853-refreshing-watermelon-salad-VAT-step-02-A-3eb78851bab3406b9bf54d6273431882.jpg"
+      alt="" />
+    <h3>Step 3</h3>
+    <p>
+      Gently combine watermelon, cucumber, feta cheese, and cilantro in a large
+      bowl; season with black pepper.
+    </p>
+    <img
+      src="https://www.allrecipes.com/thmb/VGC9kthMTJOptUNjGRK1AqsLye0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-111853-refreshing-watermelon-salad-VAT-step-03-B-35b2bb9dca67434c976f6b618a2767fc.jpg"
+      alt="" />
+    <h3>Step 4</h3>
+    <p>
+      Toss watermelon salad with marinated onions and season with sea salt just
+      before serving.
+    </p>
+    <img
+      src="https://www.allrecipes.com/thmb/hWm2Q0yqlr8og4jz-ohPGx4ea3o=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-111853-refreshing-watermelon-salad-VAT-step-04-b04071f4e0f94fdb848b57d6e70cb941.jpg"
+      alt="" />
+    <h3>Step 5</h3>
+    <p>Serve and enjoy!</p>
+    <img
+      src="https://www.allrecipes.com/thmb/07K2qxa-qMQki75FVXpVcrfrEIU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-111853-refreshing-watermelon-salad-VAT-4x3-A-57a44736879249f9a7eecae90fff4160.jpg"
+      alt="" />
   </body>
 </html>
